--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-diamond"></span></div>
 							<h2>Température du salon</h2>
-							<%= essai %>
+							<%= variable %>
 							<span class='tableauTemp'></span>
 						</div>
 					</section>
